# subjective

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: main.rs
core/src/cache/: meta.rs  mod.rs  signed_link.rs
core/src/drivers/: mod.rs  onedrive.rs
driver/: Cargo.toml
driver/src/: downloadable.rs  lib.rs  link_cache.rs  meta_data.rs
driver/src/drivers/: mod.rs  onedrive.rs
