[package]
name = "core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true }
tokio = {workspace = true}
reqwest = { version = "0.12", features = ["json"] }
chrono = {workspace = true}